--- a/views/sale.html
+++ b/views/sale.html
@@ -9,11 +9,11 @@
                     </div>
                     <div class="input">
                         <label for="sale-count">count</label>
-                        <input id="sale-count" type="number" name="count" required>
+                        <input id="sale-count" min="0" max="10000000" type="number" name="count" required>
                     </div>
                     <div class="input">
                         <label for="sale-price">price</label>
-                        <input id="sale-price" type="number" name="price" required>
+                        <input id="sale-price" min="0" max="10000000" type="number" name="price" required>
                     </div>
                     <div 
                         id="sale-information" 
