--- a/views/product.html
+++ b/views/product.html
@@ -23,7 +23,7 @@
                 <form id="purchase-form" action="/purchase/add/{{product.id}}" method="POST">
                     <div class="input">
                         <label for="purchase-count">count</label>
-                        <input id="purchase-count" type="number" max="{{product.count - product.saleCount}}" name="count">
+                        <input id="purchase-count" type="number"min="0" max="{{product.count - product.saleCount}}" name="count">
                     </div>
                     <button id="purchase-btn">구매</button>
                 </form>{% endif %}{% if user and user.id %}{% for purchase in user.Purchases %}{% if purchase.SaleId === product.id and purchase.CommentId === 0 %}
