--- a/views/product.html
+++ b/views/product.html
@@ -6,7 +6,10 @@
                     <div class="product-div">
                         <div class="product-name">Name : {{product.name}}</div>
                         <div class="product-count">Number : {{product.count - product.saleCount}}</div>
-                        <div class="product-price">Price : {{product.price}}</div>
+                        <div class="product-price">Price : {{product.price}}</div>{% if user.id === product.UserId %}
+                        <form action="/sale/del/{{product.id}}">
+                            <button type="submit">x</button>
+                        </form>{% endif %}
                     </div>
                     <div class="product-information">{{product.information}}</div>
                     <script>
