--- a/public/style.css
+++ b/public/style.css
@@ -328,6 +328,7 @@ svg {
 .sale, .purchase {
     width: 40%;
     max-height: 200px;
+    overflow-y: auto;
     padding: 10px;
     margin: 4%;
     overflow: hidden;
