--- a/views/layout.html
+++ b/views/layout.html
@@ -1,95 +1,28 @@
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="/style.css" />
     <script src="/logic.js"></script>
-</head>
-<body>
-    <div class="wrap" onclick="outLogin()">
-        <div id="menu">
-            <a id="logo" href="/">
-                <img class="windows" src="/imgs/logo.png" alt="">
-                <img class="mobile" src="/imgs/toplogo.png" alt="">
-            </a>
-            <div id="login">{% if user and user.id %}
-                <div class="logged-in">
-                    {{user.name}}님 어서오세요.
-                </div>{% else %}
-                <button id="login-top-btn" onclick="loginBtn(event)">
-                    <svg id="login-top-btn-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M12 21l-12-18h24z"/>
-                    </svg>
-                    <svg id="login-top-btn-img-on" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path d="M12 3l12 18h-24z"/>
-                    </svg>
-                </button>
-                <form id="login-box" action="/auth/login" method="POST">
-                    <div class="input" onclick="stopParentEvent(event)">
-                        <label for="login-email">E-Mail</label>
-                        <input id="login-email" type="text" name="email" required autofocus>
-                    </div>
-                    <div class="input" onclick="stopParentEvent(event)">
-                        <label for="login-pwd">Password</label>
-                        <input id="login-pwd" type="password" name="password" required>
-                    </div>{% endif %}
-                    <div class="btn">{% if user and user.id %}
-                        <a href="/profile" class="logged-in">    <!-- 내정보 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                                <path d="M24 17.99l-7.731-.001 2.731 4h-1.311l-2.736-4h-1.953l-2.736 4h-1.264l2.732-4h-2.95v-1h8.218v-1h3v1h3v-14h-17v.447h-1v-1.447h19v16zm-17.241-9c.649 0 1.293-.213 1.692-.436.755-.42 2.695-1.643 3.485-2.124.215-.13.496-.082.654.114l.009.01c.164.205.145.5-.043.68l-3.371 3.214c-.521.498-.822 1.183-.853 1.902-.095 2.207-.261 6.912-.332 8.834-.016.45-.386.806-.836.806h-.001c-.444 0-.786-.348-.836-.788-.111-.982-.329-3.279-.427-4.212-.04-.384-.279-.613-.584-.614-.304-.002-.523.226-.548.608-.062.921-.266 3.249-.342 4.221-.034.441-.397.785-.84.785h-.001c-.452 0-.823-.356-.842-.809-.097-2.34-.369-8.963-.369-8.963l-1.287 2.331c-.14.254-.445.364-.715.26l-.001-.001c-.228-.088-.371-.305-.371-.54l.022-.157 1.244-4.393c.122-.43.515-.727.963-.727h4.53zm7.241 2h5v-1h-5v1zm0-2h7v-1h-7v1zm-8.626-5c1.241 0 2.25 1.008 2.25 2.25s-1.009 2.25-2.25 2.25c-1.242 0-2.25-1.008-2.25-2.25s1.008-2.25 2.25-2.25zm8.626 3h7v-1h-7v1z"/>
-                            </svg>
-                        </a>
-                        <a href="/sale" class="logged-in">    <!-- 상품등록 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                                <path d="M12.628 21.412l5.969-5.97 1.458 3.71-12.34 4.848-4.808-12.238 9.721 9.65zm-1.276-21.412h-9.352v9.453l10.625 10.547 9.375-9.375-10.648-10.625zm4.025 9.476c-.415-.415-.865-.617-1.378-.617-.578 0-1.227.241-2.171.804-.682.41-1.118.584-1.456.584-.361 0-1.083-.408-.961-1.218.052-.345.25-.697.572-1.02.652-.651 1.544-.848 2.276-.106l.744-.744c-.476-.476-1.096-.792-1.761-.792-.566 0-1.125.227-1.663.677l-.626-.627-.698.699.653.652c-.569.826-.842 2.021.076 2.938 1.011 1.011 2.188.541 3.413-.232.6-.379 1.083-.563 1.475-.563.589 0 1.18.498 1.078 1.258-.052.386-.26.763-.621 1.122-.451.451-.904.679-1.347.679-.418 0-.747-.192-1.049-.462l-.739.739c.463.458 1.082.753 1.735.753.544 0 1.087-.201 1.612-.597l.54.538.697-.697-.52-.521c.743-.896 1.157-2.209.119-3.247zm-9.678-7.476c.938 0 1.699.761 1.699 1.699 0 .938-.761 1.699-1.699 1.699-.938 0-1.699-.761-1.699-1.699 0-.938.761-1.699 1.699-1.699z"/>
-                            </svg>
-                        </a>
-                        <a href="/auth/logout" class="logged-in"> <!-- 로그아웃 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                                <path d="M16 2v7h-2v-5h-12v16h12v-5h2v7h-16v-20h16zm2 9v-4l6 5-6 5v-4h-10v-2h10z"/>
-                            </svg>
-                        </a>{% else %}
-                        <button id="login-btn"> <!-- 로그인 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
-                                <path d="M24 22h-20v-7h2v5h16v-16h-16v5h-2v-7h20v20zm-13-11v-4l6 5-6 5v-4h-11v-2h11z"/>
-                            </svg>
-                        </button>
-                        <a href="/join" id="join-btn">    <!-- 회원가입 -->
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path d="M10.644 17.08c2.866-.662 4.539-1.241 3.246-3.682-3.932-7.427-1.042-11.398 3.111-11.398 4.235 0 7.054 4.124 3.11 11.398-1.332 2.455.437 3.034 3.242 3.682 2.483.574 2.647 1.787 2.647 3.889v1.031h-18c0-2.745-.22-4.258 2.644-4.92zm-12.644 4.92h7.809c-.035-8.177 3.436-5.313 3.436-11.127 0-2.511-1.639-3.873-3.748-3.873-3.115 0-5.282 2.979-2.333 8.549.969 1.83-1.031 2.265-3.181 2.761-1.862.43-1.983 1.34-1.983 2.917v.773z"/>
-                            </svg>
-                        </a>{% endif %}
-                    </div>
-                </form>
-            </div>
-            <div id="search" onclick="stopParentEvent(event)">
-                <button id="search-btn" onclick="onHashtag(true)" type="submit">해시 목록</button>
-                <div id="hashtag-list">
-                    {% for hashtagList in hashtagLists %}
-                    <fieldset>
-                        <legend>{{hashtagList.name}}</legend>{% for hashtag in hashtagList.list %}
-                        <div class="hashtag" onclick="clickHashtag(event, '{{hashtag.name}}')">
-                            <div class="hashtag-icon">#</div>
-                            <div class="hashtag-name">{{hashtag.name.slice(1)}}</div>
-                        </div>{% endfor %}
-                    </fieldset>{% endfor %}
-                </div>
-            </div>
-        </div>
-        <div id="container">{% block content %}
-            {% endblock %}
-        </div>
-    </div>
-    <div id="template" style="display: none;">
-        <div class="hashtag" contenteditable="false">
-            <div class="hashtag-icon">#</div>
-            <div class="hashtag-name"></div>
-        </div>
-    </div>
-
-    <script>
-    </script>
-</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/ko.min.js"
+    ></script>
+  </head>
+  <body>
+    {% include "template.html" %}
+    <div class="layout header">{% include "header.html" %}</div>
+    <div class="layout wrap">{% block wrap %}{% endblock %}</div>
+    <div class="layout footer"></div>
+  </body>
 </html>
