--- a/public/style.css
+++ b/public/style.css
@@ -9,9 +9,6 @@ img {
   width: 100%;
 }
 a {
-  /* display: inline-block; */
-  /* width: 100%;
-  height: 100%; */
   color: black;
 }
 .btn {
@@ -514,7 +511,19 @@ div.item-list > a {
 #hashtag-list fieldset {
   margin-bottom: 10px;
   padding: 0 3px 5px;
-  overflow-x: auto;
+  height: 60px;
+}
+
+#hashtag-list fieldset > div {
+  height: 100%;
+  width: 100%;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+fieldset > div::-webkit-scrollbar {
+  display: none;
 }
 
 #hashtag-list fieldset legend {
