--- a/views/profile.html
+++ b/views/profile.html
@@ -14,7 +14,7 @@
     </form>
     <div class="math-information">
       <p>이름 : <span class="user-name">{{user.name}}</span></p>
-      <p>전화번호 : <span class="user-phone">{{user.phone}}</span></p>
+      <p>전화번호 : <span class="user-phone">{{user.phoneNumber}}</span></p>
       <p>가입일 : <span class="date-join">{{user.createdAt}}</span></p>
       <p>방문자수 : <span class="count-visitor">0</span> 명</p>
       <p>판매수 : <span class="count-sale">0</span> 회</p>
