--- a/views/main.html
+++ b/views/main.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %} {% block wrap %}
 <div class="banner">
-  <div class="banner btn left"></div>
-  <div class="inner-banner"></div>
-  <div class="banner btn right"></div>
+  <!-- <div class="banner btn left"></div> -->
+  <div class="inner-banner">
+    <img src="/imgs/banner/banner.png" alt="" />
+  </div>
+  <!-- <div class="banner btn right"></div> -->
 </div>
 <div id="item-list">
   <div id="last-item-list">
