--- a/views/layout.html
+++ b/views/layout.html
@@ -23,6 +23,11 @@
     {% include "template.html" %}
     <div class="layout header">{% include "header.html" %}</div>
     <div class="layout wrap">{% block wrap %}{% endblock %}</div>
-    <div class="layout footer"></div>
+    <div class="layout footer">
+      <a href="/information"> <div id="go-information">
+        홈페이지 설명서</br>
+        정경훈(010 3283 6388)
+      </div></a>
+    </div>
   </body>
 </html>
