--- a/public/style.css
+++ b/public/style.css
@@ -555,3 +555,13 @@ fieldset > div::-webkit-scrollbar {
   margin: 2px 6px 0 4px;
   text-align: center;
 }
+.layout.footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 5px;
+  background: white;
+}
